# media-forge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
demo/: index.html
docs/: kokoro-tts-backend.md  tts-zh-comparison-2026-final.md
mcp/: server.py
mediaforge/: __init__.py  cli.py  compose.py  ingest.py  publish.py  render.py  session.py  synthesize.py  types.py
mediaforge/render/: __init__.py  _default.py  _default_impl.py  base.py  builtin_hooks.py  export.py  hooks.py  html_video_templates.py  hyperframes.py  styling.py
mediaforge/render/webcodecs/: muxer.html
openspec/: config.yaml
openspec/changes/html-video-templates/: design.md  proposal.md  tasks.md
openspec/changes/html-video-templates/specs/asset-prep/: spec.md
openspec/changes/html-video-templates/specs/cli-export/: spec.md
openspec/changes/html-video-templates/specs/template-engine/: spec.md
openspec/changes/mvp/: design.md  proposal.md  tasks.md
openspec/changes/mvp/specs/compose/: spec.md
openspec/changes/mvp/specs/ingest/: spec.md
openspec/changes/mvp/specs/publish/: spec.md
openspec/changes/mvp/specs/render/: spec.md
openspec/changes/mvp/specs/synthesize/: spec.md
openspec/changes/yaml-workflow-orchestration/: design.md  proposal.md  tasks.md
openspec/changes/yaml-workflow-orchestration/specs/backend-routing/: spec.md
openspec/changes/yaml-workflow-orchestration/specs/mediaforge-tts-azure/: spec.md
output/: index.html
scripts/: offline_html_video_assets.py
tests/: test_hooks.py  test_html_video_templates.py
wiki/: tts-zh-comparison-2026.md
(+3 files in other folders)
