[project]
name = "mediaforge"
version = "0.1.0"
description = "Content-to-multi-format media pipeline — URL/PDF/text → podcast/video. Fully offline, MIT licensed."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MediaForge Contributors" }]
keywords = ["podcast", "tts", "video", "notebooklm", "remotion", "mcp", "hermes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "trafilatura>=2.0",
    "pdfplumber>=0.11",
    "edge-tts>=6.1",
    "mcp>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
azure = ["azure-cognitiveservices-speech>=1.50"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
mediaforge = "mediaforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
